task_4/internet_gw.tf
resource "aws_internet_gateway" "dev" { 

  vpc_id = "${aws_vpc.dev.id}" 
  tags = "${var.tags}"
}
