task_4/vpc.tf
resource "aws_vpc" "dev" { 
  cidr_block = "${var.cidr_block}" 
  tags = "${var.tags}"
}
